infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pitflow-inventory
  namespace: pitflow
  labels:
    app.kubernetes.io/name: pitflow-inventory
    app.kubernetes.io/instance: pitflow-inventory
    app.kubernetes.io/component: inventory
    app.kubernetes.io/part-of: pitflow
    app.kubernetes.io/managed-by: github-actions
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pitflow-inventory
      app.kubernetes.io/instance: pitflow-inventory
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pitflow-inventory
        app.kubernetes.io/instance: pitflow-inventory
        app.kubernetes.io/component: inventory
        app.kubernetes.io/part-of: pitflow
        app.kubernetes.io/managed-by: github-actions
        tags.datadoghq.com/env: "producao"
        tags.datadoghq.com/service: "pitflow-inventory"
        tags.datadoghq.com/version: "${IMAGE_VERSION}"
      annotations:
        admission.datadoghq.com/java-lib.version: "latest"
    spec:
      containers:
        - name: pitflow-inventory
          image: "${CONTAINER_IMAGE}"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "384Mi"
            limits:
              cpu: "600m"
              memory: "768Mi"
          startupProbe:
            httpGet:
              path: /inventory/actuator/health
              port: 8080
            failureThreshold: 18
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /inventory/actuator/health
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /inventory/actuator/health
              port: 8080
            periodSeconds: 15
            failureThreshold: 3
            timeoutSeconds: 5
